Corrected a typo in composer.json

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         {
             "name": "Alexandre André",
             "email": "alexandre@creakiwi.com",
-            "homepage": "creakiwi.com",
+            "homepage": "creakiwi.com"
         }
     ],
     "require": {
