--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,9 @@
         }
     ],
     "require": {
-        "symfony/console": "2.1.*"
+        "symfony/console": "2.1.*",
+        "symfony/yaml": "2.1.*",
+        "symfony/filesystem": "2.1.*"
     },
     "autoload": {
         "psr-0": { "Pmaker": "src/" }
